[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pyrosetta_help"]

[project]
name = "pyrosetta_help"
version = "0.5.11"
description = "A variety of functions to make working with Pyrosetta easier."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Matteo Ferla", email = "matteo.ferla@gmail.com" },
]
dependencies = [
    "rdkit-to-params",
    "xerox",
    "requests",
    "pandas",
    "biopython"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://github.com/matteoferla/pyrosetta_help"

[project.scripts]
install_pyrosetta = "pyrosetta_help.installer:parse"
